; ModuleID = '/home/carl/AnghaBench/obs-studio/deps/obs-scripting/extr_obs-scripting-lua.c_source_enum_filters.c'
source_filename = "/home/carl/AnghaBench/obs-studio/deps/obs-scripting/extr_obs-scripting-lua.c_source_enum_filters.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@obs_source_t = common dso_local global i32 0, align 4
@source = common dso_local global i32 0, align 4
@source_enum_filters_proc = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @source_enum_filters to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @source_enum_filters(i32* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  %4 = load i32, i32* @obs_source_t, align 4
  %5 = load i32, i32* @source, align 4
  %6 = mul nsw i32 %4, %5
  %7 = load i32, i32* @obs_source_t, align 4
  %8 = call i32 @ls_get_libobs_obj(i32 %7, i32 1, i32* @source)
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %11, label %10

10:                                               ; preds = %1
  store i32 0, i32* %2, align 4
  br label %18

11:                                               ; preds = %1
  %12 = load i32*, i32** %3, align 8
  %13 = call i32 @lua_newtable(i32* %12)
  %14 = load i32, i32* @source, align 4
  %15 = load i32, i32* @source_enum_filters_proc, align 4
  %16 = load i32*, i32** %3, align 8
  %17 = call i32 @obs_source_enum_filters(i32 %14, i32 %15, i32* %16)
  store i32 1, i32* %2, align 4
  br label %18

18:                                               ; preds = %11, %10
  %19 = load i32, i32* %2, align 4
  ret i32 %19
}

declare dso_local i32 @ls_get_libobs_obj(i32, i32, i32*) #1

declare dso_local i32 @lua_newtable(i32*) #1

declare dso_local i32 @obs_source_enum_filters(i32, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
